--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "glob": "^7.1.6",
     "next": "^9.4.4",
