--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-jest": "^26.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "supertest": "^4.0.2"
   }
 }
