--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "express": "^4.17.1",
     "glob": "^7.1.6",
     "next": "^9.4.4",
+    "next-i18next": "^4.4.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "rebass": "^4.0.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
