--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-spinners": "^0.8.3",
     "rebass": "^4.0.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
