--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn test"
+      "pre-push": "yarn test:ci"
     }
   },
   "dependencies": {
