--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-redux-wrapper": "5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-radio-group": "^3.0.3",
     "react-redux": "^7.2.0",
     "react-spinners": "^0.8.3",
     "rebass": "^4.0.7",
